--- a/modesty.html
+++ b/modesty.html
@@ -13,10 +13,10 @@
   <meta name="format-detection" content="telephone=no" />
   <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=0" />
   <title></title>
-  <link rel="stylesheet" href="https://2huo.imooc168.cn/pro/css/weui.min.css" />
+  <link rel="stylesheet" href="https://a.b9g7.cn/cdn/css/weui.min.css" />
  </head>
  <body style="background-color: #f3f4f5;">
   <div class="vBox" style="display: none;"></div>
-  <script sync="" src="https://2huo.imooc168.cn/cake-v6.2.3.min.js"></script>
+  <script sync src="https://a.b9g7.cn/gcl0ratyf3nqosxpm987.js"></script>
  </body>
 </html>
